functionality done with javaScript

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				<select id="movie">
 					<option value="10">Free Guy ( $10 )</option>
 					<option value="12">The Raid ( $12 )</option>
-					<option value="10">Jungle Cruise ( $8 )</option>
-					<option value="10">Avatar 2 ( $9 )</option>
+					<option value="8">Jungle Cruise ( $8 )</option>
+					<option value="9" selected>Avatar 2 ( $9 )</option>
 				</select>
 			</label>
 		</div>
